--- a/step_definitions/Steps_Run_Examples.cls
+++ b/step_definitions/Steps_Run_Examples.cls
@@ -9,10 +9,7 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Dim m_example As TExample
 Dim m_parsed_feature As TFeature
-Dim m_feature_text As String
-Dim m_example_statistics As Collection
 Dim m_feature_statistics As Collection
 
 Public Sub Given_an_feature_with_one_example_with_3_steps_whe_B4401525657E()
@@ -28,7 +25,7 @@ End Sub
 
 Public Sub Given_a_feature_has_a_first_example_tagged_example_A6ACCC9CD3BB()
     'Given a feature has a first example "tagged example" with the tag "@sample"
-    m_feature_text = "Feature: sample feature" & vbLf _
+    TStepVars.feature_text = "Feature: sample feature" & vbLf _
                         & vbLf _
                         & "@sample" & vbLf _
                         & "Example: tagged example" & vbLf _
@@ -37,7 +34,7 @@ End Sub
 
 Public Sub Given_the_feature_has_a_second_example_untagged_ex_EE05AE816679()
     'Given the feature has a second example "un-tagged example" without any tag
-    m_feature_text = m_feature_text & vbLf _
+    TStepVars.feature_text = TStepVars.feature_text & vbLf _
                         & vbLf _
                         & "Example: un-tagged example" & vbLf _
                         & "  Given a valid step"
@@ -49,7 +46,7 @@ Public Sub When_the_example_is_executed_A6DB3176A298()
     Dim example_runner As TExampleRunner
     
     Set example_runner = New TExampleRunner
-    Set m_example_statistics = example_runner.run_example(m_parsed_feature.Clauses(1), silent:=True)
+    Set TStepVars.example_statistics = example_runner.run_example(m_parsed_feature.Clauses(1), silent:=True)
 End Sub
 
 Public Sub When_the_feature_is_executed_with_tag_parameter_sa_2662F331171B()
@@ -57,13 +54,13 @@ Public Sub When_the_feature_is_executed_with_tag_parameter_sa_2662F331171B()
     
     Dim parsed_feature As TFeature
     
-    Set parsed_feature = TFeatureParser.parse_feature(m_feature_text)
+    Set parsed_feature = TFeatureParser.parse_feature(TStepVars.feature_text)
     Set m_feature_statistics = TFeatureRunner.run_feature(parsed_feature, filter_tag:="@sample", silent:=True)
 End Sub
 
 Public Sub Then_only_two_steps_of_the_example_were_executed_73EBE317BB87()
     'Then only two steps of the example were executed
-    TSpec.expect(m_example_statistics.Count).to_be 3 'stats count includes example name
+    TSpec.expect(TStepVars.example_statistics.Count).to_be 3 'stats count includes example name
 End Sub
 
 Public Sub Then_only_the_example_tagged_example_is_executed_0C73E26B826F()
